Add back 02-metaballs

--- a/examples/makefile
+++ b/examples/makefile
@@ -5,7 +5,7 @@
 
 rebuild:
 	@make -s --no-print-directory rebuild -C 01-cubes
-#	@make -s --no-print-directory rebuild -C 02-metaballs
+	@make -s --no-print-directory rebuild -C 02-metaballs
 	@make -s --no-print-directory rebuild -C 03-raymarch
 	@make -s --no-print-directory rebuild -C 04-mesh
 #	@make -s --no-print-directory rebuild -C 05-instancing
