--- a/examples/makefile
+++ b/examples/makefile
@@ -8,7 +8,7 @@ rebuild:
 	@make -s --no-print-directory rebuild -C 02-metaballs
 	@make -s --no-print-directory rebuild -C 03-raymarch
 	@make -s --no-print-directory rebuild -C 04-mesh
-#	@make -s --no-print-directory rebuild -C 05-instancing
+	@make -s --no-print-directory rebuild -C 05-instancing
 	@make -s --no-print-directory rebuild -C 06-bump
 #	@make -s --no-print-directory rebuild -C 07-callback
 #	@make -s --no-print-directory rebuild -C 08-update
