Tweak examples for WebGPU

--- a/examples/makefile
+++ b/examples/makefile
@@ -10,9 +10,9 @@ rebuild:
 	@make -s --no-print-directory rebuild -C 04-mesh
 	@make -s --no-print-directory rebuild -C 05-instancing
 	@make -s --no-print-directory rebuild -C 06-bump
-#	@make -s --no-print-directory rebuild -C 07-callback
+	@make -s --no-print-directory rebuild -C 07-callback
 #	@make -s --no-print-directory rebuild -C 08-update
-#	@make -s --no-print-directory rebuild -C 09-hdr
+	@make -s --no-print-directory rebuild -C 09-hdr
 ##	@make -s --no-print-directory rebuild -C 10-font
 ##	@make -s --no-print-directory rebuild -C 11-fontsdf
 #	@make -s --no-print-directory rebuild -C 12-lod
