Cleanup WebGPU examples

--- a/examples/makefile
+++ b/examples/makefile
@@ -17,7 +17,7 @@ rebuild:
 ##	@make -s --no-print-directory rebuild -C 11-fontsdf
 #	@make -s --no-print-directory rebuild -C 12-lod
 #	@make -s --no-print-directory rebuild -C 13-stencil
-#	@make -s --no-print-directory rebuild -C 14-shadowvolumes
+	@make -s --no-print-directory rebuild -C 14-shadowvolumes
 #	@make -s --no-print-directory rebuild -C 15-shadowmaps-simple
 #	@make -s --no-print-directory rebuild -C 16-shadowmaps
 #	@make -s --no-print-directory rebuild -C 17-drawstress
