--- a/examples/makefile
+++ b/examples/makefile
@@ -30,7 +30,7 @@ rebuild:
 ##	@make -s --no-print-directory rebuild -C 25-c99
 ##	@make -s --no-print-directory rebuild -C 26-occlusion
 	@make -s --no-print-directory rebuild -C 27-terrain
-#	@make -s --no-print-directory rebuild -C 28-wireframe
+	@make -s --no-print-directory rebuild -C 28-wireframe
 #	@make -s --no-print-directory rebuild -C 30-picking
 #	@make -s --no-print-directory rebuild -C 31-rsm
 #	@make -s --no-print-directory rebuild -C 33-pom
